group= 'com.jiushig'
version= '1.0.beat'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.springframework.boot:spring-boot-starter-web:1.5.9.RELEASE'
    compile 'com.auth0:java-jwt:3.4.0'
    compile 'com.google.code.gson:gson:2.8.5'
}

